# lib-mpc-zexe

./: Cargo.toml  README.md
design/: swap.md
src/: coin.rs  encoding.rs  kzg.rs  lib.rs  plonk.rs  protocol.rs  utils.rs
src/apps/: collaborative_proof_lottery.rs  collaborative_proof_payment.rs  collaborative_proof_swap.rs  collaborative_proof_trade.rs  end_to_end_payment.rs  local_proof_test_app1.rs  local_proof_test_app3.rs  local_proof_test_app4.rs  local_proof_test_app5.rs  lottery.rs  mod.rs  onramp.rs  payment.rs  swap.rs  test_app2.rs  test_app6.rs  trade.rs
src/collaborative_snark/: distributed_plonk.rs  mod.rs  plonk.rs  plonk_utils.rs
src/merkle_tree/: constraints.rs  mod.rs
src/prf/: constraints.rs  mod.rs
src/prf/config/: ed_on_bls12_377.rs  ed_on_bw6_761.rs
src/record_commitment/: constraints.rs  mod.rs
src/record_commitment/kzg/: constraints.rs  mod.rs
src/record_commitment/sha256/: constraints.rs  mod.rs
src/services/client/: main.rs
src/services/lottery/client/: main.rs
src/services/lottery/prover/: main.rs
src/services/lottery/verifier/: main.rs
src/services/matchmaker/: main.rs
src/services/prover/: lottery_prover.rs  main.rs
src/services/swap/client/: main.rs
src/services/swap/matchmaker/: main.rs
src/services/swap/prover/: main.rs
src/services/swap/verifier/: main.rs
src/services/verifier/: lottery_verifier.rs  main.rs
src/vector_commitment/: mod.rs
src/vector_commitment/bytes/: common.rs  constraints.rs  mod.rs
src/vector_commitment/bytes/pedersen/: common.rs  constraints.rs  mod.rs
src/vector_commitment/bytes/pedersen/config/: ed_on_bls12_377.rs  ed_on_bw6_761.rs  mod.rs
src/vector_commitment/bytes/sha256/: common.rs  constraints.rs  mod.rs
tests/: collaborative_proof_lottery.rs  collaborative_proof_payment.rs  collaborative_proof_swap.rs  collaborative_proof_trade.rs  end_to_end_payment.rs  local_proof_test_app1.rs  local_proof_test_app2.rs  local_proof_test_app3.rs  local_proof_test_app4.rs  local_proof_test_app5.rs  local_proof_test_app6.rs  mod.rs
