[package]
name = "mpc_zexe"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_mpc_zexe"
path = "src/lib.rs"

[[bin]]
name = "lottery_matchmaker"
path = "src/services/lottery/matchmaker/main.rs"

[[bin]]
name = "lottery_prover"
path = "src/services/lottery/prover/main.rs"

[[bin]]
name = "lottery_verifier"
path = "src/services/lottery/verifier/main.rs"

[[bin]]
name = "lottery_client"
path = "src/services/lottery/client/main.rs"

[[bin]]
name = "swap_matchmaker"
path = "src/services/swap/matchmaker/main.rs"

[[bin]]
name = "swap_prover"
path = "src/services/swap/prover/main.rs"

[[bin]]
name = "swap_verifier"
path = "src/services/swap/verifier/main.rs"

[[bin]]
name = "swap_client"
path = "src/services/swap/client/main.rs"


[profile.test]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
rand = "*"
rand_chacha = "*"
derivative = { version = "2.0", features = ["use_core"] }
num-bigint = { version = "0.4", default-features = false }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }

ark-ff = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false, features = ["getrandom"] }
ark-r1cs-std = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["r1cs", "crh"] }
ark-snark = { version = "0.4.0", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false, features = [ "r1cs", "parallel" ] }
ark-serialize = { version = "0.4.0", default-features = true }

# curves
ark-ec = { version = "0.4.0", default-features = false }
ark-bls12-377 = { version = "0.4.0", default-features = false, features = [ "curve", "r1cs" ] }
ark-bw6-761 = { version = "0.4.0" }
ark-ed-on-bls12-377 = { version = "0.4.0", default-features = false, features = [ "r1cs" ] }
ark-ed-on-bw6-761 = { version = "0.4.0", default-features = false, features = [ "r1cs" ] }

clap = "3.0"
actix-rt = "2.7"
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.22.0"
tokio = { version = "1.35.1", features = ["full"] }
bs58 = { version = "*" }
hex = { version = "*" }

[dev-dependencies]
ark-relations = { version = "0.4.0", default-features = false }
ark-algebra-test-templates = { version = "0.4.0", default-features = false }
